--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
           </div>
           <!-- Image Section -->
           <div class="col-lg-6 text-end mb-4">
-            <img src="img/Untitled design (3).png" alt="Blob Image" width="300" />
+            <img src="/img/Untitled design (3).png" alt="Blob Image" width="300" />
           </div>
         </div>
       </div>
@@ -95,7 +95,7 @@
           <div class="col">
             <div class="card">
               <h3>Cooklet</h3>
-              <img src="img/cooklet.png" alt="Project 1" class="card-img-top" />
+              <img src="/img/cooklet.png" alt="Project 1" class="card-img-top" />
               <div class="card-body">
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
                 <div class="d-flex justify-content-center gap-1 mt-2">
@@ -108,7 +108,7 @@
           <div class="col">
             <div class="card">
               <h3>Cooklet</h3>
-              <img src="img/cooklet.png" alt="Project 2" class="card-img-top" />
+              <img src="/img/cooklet.png" alt="Project 2" class="card-img-top" />
               <div class="card-body">
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
                 <div class="d-flex justify-content-center gap-1 mt-2">
@@ -123,7 +123,7 @@
           <div class="col">
             <div class="card">
               <h3>Cooklet</h3>
-              <img src="img/cooklet.png" alt="Project 3" class="card-img-top" />
+              <img src="/img/cooklet.png" alt="Project 3" class="card-img-top" />
               <div class="card-body">
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
                 <div class="d-flex justify-content-center gap-1 mt-2">
@@ -136,7 +136,7 @@
           <div class="col">
             <div class="card">
               <h3>Cooklet</h3>
-              <img src="img/cooklet.png" alt="Project 4" class="card-img-top" />
+              <img src="/img/cooklet.png" alt="Project 4" class="card-img-top" />
               <div class="card-body">
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
                 <div class="d-flex justify-content-center gap-1 mt-2">
@@ -149,7 +149,7 @@
           <div class="col">
             <div class="card mb-4">
               <h3>Cooklet</h3>
-              <img src="img/cooklet.png" alt="Project 5" class="card-img-top" />
+              <img src="/img/cooklet.png" alt="Project 5" class="card-img-top" />
               <div class="card-body">
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
                 <div class="d-flex justify-content-center gap-1 mt-2">
@@ -173,20 +173,29 @@
         </div>
       </div>
       <div class="row justify-content-center">
-        <div class="col-md-6 "><form>
+        <div class="col-md-6 ">
+          <div class="alert alert-success alert-dismissible fade show d-none alrt-success" role="alert" >
+            <strong>Thank You!!</strong> Your message has been sent.
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+          <form name="contact-form">
           <div class="mb-3">
             <label for="name" class="form-label">Full Name</label>
-            <input type="text" class="form-control" id="name" aria-describedby="emailHelp">
+            <input name="name" type="text" class="form-control" id="name" aria-describedby="emailHelp">
           </div>
           <div class="mb-3">
             <label for="email" class="form-label">Email</label>
-            <input type="email" class="form-control" id="email" aria-describedby="email">
+            <input name="email" type="email" class="form-control" id="email" aria-describedby="email">
           </div>
           <div class="mb-3">
             <label for="Message" class="form-label">Message</label>
-            <textarea class="form-control" id="Message" rows="3"></textarea>
+            <textarea name="message" class="form-control" id="Message" rows="3"></textarea>
           </div>
-          <button type="submit" class="btn btn-secondary mb-4">Submit</button>
+          <button type="submit" class="btn btn-secondary mb-4 btn-send">Submit</button>
+          <button class="btn btn-secondary mb-4 d-none btn-load" type="button" disabled>
+            <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
+            <span role="status">Loading...</span>
+          </button>
         </form></div>
       </div>
      </section>
@@ -211,5 +220,31 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+      const scriptURL = 'https://script.google.com/macros/s/AKfycbydSYCrqpn9u80hRF16pKn_P8UAxBFSoeVA-HOid-ibAraK9icrVbRv3h_SMpNmcOd9/exec'
+      const form = document.forms['contact-form']
+      const btnSend = document.querySelector('.btn-send')
+      const btnLoad = document.querySelector('.btn-load')
+      const alrtSuccess = document.querySelector('.alrt-success')
+
+      form.addEventListener('submit', e => {
+        e.preventDefault()
+
+        // ketika submit diklik
+        // tampilkan tombol loading, hilangkan submit
+        btnLoad.classList.toggle('d-none');
+        btnSend.classList.toggle('d-none');
+
+        fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+          .then(response => {
+            console.log('Success!', response)
+            btnLoad.classList.toggle('d-none');
+            btnSend.classList.toggle('d-none');
+            alrtSuccess.classList.toggle('d-none');
+            form.reset();
+          })
+          .catch(error => console.error('Error!', error.message))
+      })
+    </script>
   </body>
 </html>
