--- a/index.html
+++ b/index.html
@@ -8,30 +8,60 @@
     <link rel="stylesheet" href="style.css" />
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <!-- GSAP -->
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/TextPlugin.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
   </head>
 
   <body id="home">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg  navbar-color-gradient shadow-sm">
+    <nav class="navbar navbar-expand-lg sticky-top navbar-color-gradient shadow-sm">
       <div class="container">
-        <a class="navbar-brand fw-bolder" href="#">Portofolio</a>
+        <a class="navbar-brand text-light fw-bolder" href="#">Portofolio</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+          <span
+            ><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0,0,256,256">
+              <g
+                fill="#ffffff"
+                fill-rule="nonzero"
+                stroke="none"
+                stroke-width="1"
+                stroke-linecap="butt"
+                stroke-linejoin="miter"
+                stroke-miterlimit="10"
+                stroke-dasharray=""
+                stroke-dashoffset="0"
+                font-family="none"
+                font-weight="none"
+                font-size="none"
+                text-anchor="none"
+                style="mix-blend-mode: normal"
+              >
+                <g transform="scale(8,8)">
+                  <path
+                    d="M8,5c-1.64497,0 -3,1.35503 -3,3c0,1.64497 1.35503,3 3,3h16c1.64497,0 3,-1.35503 3,-3c0,-1.64497 -1.35503,-3 -3,-3zM8,7h16c0.56503,0 1,0.43497 1,1c0,0.56503 -0.43497,1 -1,1h-16c-0.56503,0 -1,-0.43497 -1,-1c0,-0.56503 0.43497,-1 1,-1zM8,13c-1.64497,0 -3,1.35503 -3,3c0,1.64497 1.35503,3 3,3h16c1.64497,0 3,-1.35503 3,-3c0,-1.64497 -1.35503,-3 -3,-3zM8,15h16c0.56503,0 1,0.43497 1,1c0,0.56503 -0.43497,1 -1,1h-16c-0.56503,0 -1,-0.43497 -1,-1c0,-0.56503 0.43497,-1 1,-1zM8,21c-1.64497,0 -3,1.35503 -3,3c0,1.64497 1.35503,3 3,3h16c1.64497,0 3,-1.35503 3,-3c0,-1.64497 -1.35503,-3 -3,-3zM8,23h16c0.56503,0 1,0.43497 1,1c0,0.56503 -0.43497,1 -1,1h-16c-0.56503,0 -1,-0.43497 -1,-1c0,-0.56503 0.43497,-1 1,-1z"
+                  ></path>
+                </g>
+              </g></svg
+          ></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#home">Home</a>
+              <a class="text-light fw-bolder nav-link active" aria-current="page" href="#home">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about">About Me</a>
+              <a class="text-light nav-link" href="#about">About Me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#project">Project</a>
+              <a class="text-light nav-link" href="#project">Project</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact Me</a>
+              <a class="text-light nav-link" href="#contact">Contact Me</a>
             </li>
           </ul>
         </div>
@@ -44,12 +74,12 @@
       <div class="container">
         <div class="row">
           <!-- Text Section -->
-          <div class="col-lg-6 ">
+          <div class="col-lg-6 text-center">
             <h1 class="display-4">Luvky Pratama Johanes</h1>
-            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+            <p class="lead short-abt">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
           </div>
           <!-- Image Section -->
-          <div class="col-lg-6 text-end mb-4">
+          <div class="col-lg-6 text-center mb-4">
             <img src="/img/Untitled design (3).png" alt="Blob Image" width="300" />
           </div>
         </div>
@@ -58,26 +88,32 @@
     <!-- Akhir Jumbotron -->
 
     <!-- ABT ME -->
-    <section class="abtme-color text-light" id="about">
+    <section data-aos-offset="300" class="abtme-color text-light" id="about">
       <div class="container-fluid">
-        <h1 class="text-center mb-4">About Me</h1>
+        <h1 data-aos="fade-down" data-aos-duration="3000" class="text-center mb-4">About Me</h1>
       </div>
       <div class="container text-center">
         <div class="row align-items-center">
-          <div class="col mb-4">
+          <div data-aos="fade-down" data-aos-duration="3000" data-aos-delay="1000" class="col mb-4">
             <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
               consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
           </div>
-          <div class="col mb-4">
+          <div data-aos="fade-up" data-aos-duration="3000" data-aos-delay="1500" class="col mb-4">
             <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
               consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
           </div>
-          <div class="col mb-4">
+          <div data-aos="fade-down" data-aos-duration="3000" data-aos-delay="2000" class="col mb-4">
             <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
               consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
@@ -89,11 +125,11 @@
 
     <!-- Project -->
     <section class="project-color text-light" id="project">
-      <h1 class="text-center mb-4">Project</h1>
+      <h1 data-aos="fade-down" data-aos-duration="3000" data-aos-offset="300" class="text-center mb-4" id="project-tittle">Project</h1>
       <div class="container text-center">
         <div class="row">
           <div class="col">
-            <div class="card">
+            <div data-aos="flip-up" data-aos-duration="2000" data-aos-delay="1000" data-aos-offset="300" class="card">
               <h3>Cooklet</h3>
               <img src="/img/cooklet.png" alt="Project 1" class="card-img-top" />
               <div class="card-body">
@@ -106,7 +142,7 @@
             </div>
           </div>
           <div class="col">
-            <div class="card">
+            <div data-aos="flip-up" data-aos-duration="2000" data-aos-delay="1500" data-aos-offset="300" class="card">
               <h3>Cooklet</h3>
               <img src="/img/cooklet.png" alt="Project 2" class="card-img-top" />
               <div class="card-body">
@@ -121,7 +157,7 @@
         </div>
         <div class="row">
           <div class="col">
-            <div class="card">
+            <div data-aos="flip-up" data-aos-duration="2000" data-aos-delay="2000" class="card">
               <h3>Cooklet</h3>
               <img src="/img/cooklet.png" alt="Project 3" class="card-img-top" />
               <div class="card-body">
@@ -134,7 +170,7 @@
             </div>
           </div>
           <div class="col">
-            <div class="card">
+            <div data-aos="flip-up" data-aos-duration="2000" data-aos-delay="2500" class="card">
               <h3>Cooklet</h3>
               <img src="/img/cooklet.png" alt="Project 4" class="card-img-top" />
               <div class="card-body">
@@ -147,7 +183,7 @@
             </div>
           </div>
           <div class="col">
-            <div class="card mb-4">
+            <div data-aos="flip-up" data-aos-duration="2000" data-aos-delay="3000" class="card mb-4">
               <h3>Cooklet</h3>
               <img src="/img/cooklet.png" alt="Project 5" class="card-img-top" />
               <div class="card-body">
@@ -158,93 +194,162 @@
                 </div>
               </div>
             </div>
+          </div>
         </div>
       </div>
     </section>
     <!-- end project -->
 
     <!-- Contact Me -->
-     <section class="contact-color text-light" id="contact">
+    <section class="contact-color text-light" id="contact">
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
-            <h2 >Contact Me</h2>
+            <h2>Contact Me</h2>
           </div>
         </div>
       </div>
       <div class="row justify-content-center">
-        <div class="col-md-6 ">
-          <div class="alert alert-success alert-dismissible fade show d-none alrt-success" role="alert" >
+        <div class="col-md-6">
+          <div class="alert alert-success alert-dismissible fade show d-none alrt-success" role="alert">
             <strong>Thank You!!</strong> Your message has been sent.
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
           </div>
           <form name="contact-form">
-          <div class="mb-3">
-            <label for="name" class="form-label">Full Name</label>
-            <input name="name" type="text" class="form-control" id="name" aria-describedby="emailHelp">
-          </div>
-          <div class="mb-3">
-            <label for="email" class="form-label">Email</label>
-            <input name="email" type="email" class="form-control" id="email" aria-describedby="email">
-          </div>
-          <div class="mb-3">
-            <label for="Message" class="form-label">Message</label>
-            <textarea name="message" class="form-control" id="Message" rows="3"></textarea>
-          </div>
-          <button type="submit" class="btn btn-secondary mb-4 btn-send">Submit</button>
-          <button class="btn btn-secondary mb-4 d-none btn-load" type="button" disabled>
-            <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
-            <span role="status">Loading...</span>
-          </button>
-        </form></div>
+            <div class="mb-3">
+              <label for="name" class="form-label">Full Name</label>
+              <input name="name" type="text" class="form-control" id="name" aria-describedby="emailHelp" />
+            </div>
+            <div class="mb-3">
+              <label for="email" class="form-label">Email</label>
+              <input name="email" type="email" class="form-control" id="email" aria-describedby="email" />
+            </div>
+            <div class="mb-3">
+              <label for="Message" class="form-label">Message</label>
+              <textarea name="message" class="form-control" id="Message" rows="3"></textarea>
+            </div>
+            <button type="submit" class="btn btn-secondary mb-4 btn-send">Submit</button>
+            <button class="btn btn-secondary mb-4 d-none btn-load" type="button" disabled>
+              <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
+              <span role="status">Loading...</span>
+            </button>
+          </form>
+        </div>
       </div>
-     </section>
+    </section>
+
     <!-- end contact me -->
 
     <!-- footer -->
-<footer class="footer-color text-light text-center p-3">
-  <p>Created with ❤️ by Luvky</p>
-  <div class="social-icons">
-    <a href="https://www.instagram.com/kky_jo" target="_blank">
-      <i class="bi bi-instagram"></i>
-    </a>
-    <a href="https://www.linkedin.com/in/luvky-johanes-103192263" target="_blank">
-      <i class="bi bi-linkedin"></i>
-    </a>
-    <a href="https://github.com/kyl464" target="_blank">
-      <i class="bi bi-github"></i>
-    </a>
-  </div>
-</footer>
-<!-- end footer -->
+    <footer class="footer-color text-light text-center p-3">
+      <p>Created with ❤️ by Luvky</p>
+      <div class="social-icons">
+        <a class="ig" href="https://www.instagram.com/kky_jo" target="_blank">
+          <i class="bi bi-instagram"></i>
+        </a>
+        <a class="linkedin" href="https://www.linkedin.com/in/luvky-johanes-103192263" target="_blank">
+          <i class="bi bi-linkedin"></i>
+        </a>
+        <a class="git" href="https://github.com/kyl464" target="_blank">
+          <i class="bi bi-github"></i>
+        </a>
+      </div>
+    </footer>
+    <!-- end footer -->
 
-
+    <!-- script js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-      const scriptURL = 'https://script.google.com/macros/s/AKfycbydSYCrqpn9u80hRF16pKn_P8UAxBFSoeVA-HOid-ibAraK9icrVbRv3h_SMpNmcOd9/exec'
-      const form = document.forms['contact-form']
-      const btnSend = document.querySelector('.btn-send')
-      const btnLoad = document.querySelector('.btn-load')
-      const alrtSuccess = document.querySelector('.alrt-success')
+      const scriptURL = "https://script.google.com/macros/s/AKfycbydSYCrqpn9u80hRF16pKn_P8UAxBFSoeVA-HOid-ibAraK9icrVbRv3h_SMpNmcOd9/exec";
+      const form = document.forms["contact-form"];
+      const btnSend = document.querySelector(".btn-send");
+      const btnLoad = document.querySelector(".btn-load");
+      const alrtSuccess = document.querySelector(".alrt-success");
 
-      form.addEventListener('submit', e => {
-        e.preventDefault()
+      form.addEventListener("submit", (e) => {
+        e.preventDefault();
 
         // ketika submit diklik
         // tampilkan tombol loading, hilangkan submit
-        btnLoad.classList.toggle('d-none');
-        btnSend.classList.toggle('d-none');
+        btnLoad.classList.toggle("d-none");
+        btnSend.classList.toggle("d-none");
 
-        fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-          .then(response => {
-            console.log('Success!', response)
-            btnLoad.classList.toggle('d-none');
-            btnSend.classList.toggle('d-none');
-            alrtSuccess.classList.toggle('d-none');
+        fetch(scriptURL, { method: "POST", body: new FormData(form) })
+          .then((response) => {
+            console.log("Success!", response);
+            btnLoad.classList.toggle("d-none");
+            btnSend.classList.toggle("d-none");
+            alrtSuccess.classList.toggle("d-none");
             form.reset();
           })
-          .catch(error => console.error('Error!', error.message))
-      })
+          .catch((error) => console.error("Error!", error.message));
+      });
+    </script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        once: true,
+        duration: 2000,
+      });
+    </script>
+    <script>
+      let lastScrollTop = 0;
+      const navbar = document.querySelector(".navbar");
+      gsap.registerPlugin(TextPlugin);
+      gsap.registerPlugin(ScrollTrigger);
+
+      gsap.from(".lead", { duration: 3, text: "" });
+
+      gsap.from(".jumbotron img", { x: 100, duration: 3, ease: "elastic.out(1,0.3)", opacity: 0 });
+      gsap.from(".display-4", { x: -50, duration: 2, delay: 0.5, opacity: 0, ease: "back" });
+      gsap.from(".ig", {
+        y: -50,
+        opacity: 0,
+        ease: "back",
+        duration: 2,
+        scrollTrigger: {
+          trigger: "#contact", // Bagian "Contact Me"
+          start: "top center", // Mulai saat bagian atas "Contact Me" masuk viewport tengah
+        },
+      });
+
+      gsap.from(".linkedin", {
+        y: -50,
+        opacity: 0,
+        ease: "back",
+        duration: 2,
+        delay: 0.5,
+        scrollTrigger: {
+          trigger: "#contact",
+          start: "top center",
+        },
+      });
+
+      gsap.from(".git", {
+        y: -50,
+        opacity: 0,
+        ease: "back",
+        duration: 2,
+        delay: 1,
+        scrollTrigger: {
+          trigger: "#contact",
+          start: "top center",
+        },
+      });
+
+      window.addEventListener("scroll", function () {
+        let scrollTop = window.pageYOffset || document.documentElement.scrollTop;
+
+        if (scrollTop > lastScrollTop) {
+          // Scroll ke bawah, sembunyikan navbar
+          gsap.to(navbar, { top: "-80px", duration: 0.5, ease: "power2.out" });
+        } else {
+          // Scroll ke atas, tampilkan navbar
+          gsap.to(navbar, { top: "0", duration: 0.5, ease: "power2.out" });
+        }
+
+        lastScrollTop = scrollTop;
+      });
     </script>
   </body>
 </html>
