Fixing navbar animation

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
   <body id="home">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg sticky-top navbar-color-gradient shadow-sm">
-      <div class="container">
+    <nav class="navbar navbar-expand-lg sticky-top shadow-sm">
+      <div class="container-fluid">
         <a class="navbar-brand text-light fw-bolder" href="#">Portofolio</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span
@@ -72,15 +72,17 @@
     <!-- Jumbotron -->
     <section class="jumbotron shadow-sm text-light" id="jumbotron">
       <div class="container">
-        <div class="row">
+        <div class="row d-flex flex-column text-center align-items-center">
           <!-- Text Section -->
-          <div class="col-lg-6 text-center">
-            <h1 class="display-4">Luvky Pratama Johanes</h1>
-            <p class="lead short-abt">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+          <div class="col-12">
+            <h1 class="display-4">Hi! I'm Luvky Pratama Johanes</h1>
+            <p class="lead short-abt">
+              A Computer Science student at BINUS with a passion for web development. Skilled in various programming languages like HTML, CSS, JavaScript, and more. Excited to keep expanding my expertise in the tech world!
+            </p>
           </div>
           <!-- Image Section -->
-          <div class="col-lg-6 text-center mb-4">
-            <img src="/img/Untitled design (3).png" alt="Blob Image" width="300" />
+          <div class="col-12">
+            <img src="/img/Untitled design (3).png" alt="ME" width="300" class="mt-4" />
           </div>
         </div>
       </div>
@@ -94,28 +96,25 @@
       </div>
       <div class="container text-center">
         <div class="row align-items-center">
-          <div data-aos="fade-down" data-aos-duration="3000" data-aos-delay="1000" class="col mb-4">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          <div data-aos="fade-down" data-aos-duration="3000" data-aos-delay="1000" class="col">
+            <p class="">
+              I am currently a Computer Science student at BINUS University, driven by a deep passion for programming. Since a young age, I’ve been fascinated by technology and how it shapes the world around us. This curiosity naturally led
+              me to pursue a degree in Computer Science, where I’ve been able to sharpen my skills in a wide variety of programming languages and frameworks. My journey in coding has been fueled by a desire to continuously learn and
+              challenge myself with new technologies.Among my primary interests is web development, a field I find particularly exciting because of its rapid evolution.
             </p>
           </div>
-          <div data-aos="fade-up" data-aos-duration="3000" data-aos-delay="1500" class="col mb-4">
+          <div data-aos="fade-up" data-aos-duration="3000" data-aos-delay="1500" class="col">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              The web is an ever-changing platform, with new tools and standards emerging frequently, which provides endless opportunities for exploration. I enjoy working on projects that push the boundaries of interactivity and
+              creativity, and I’m always eager to learn the latest trends in web design and development. I’ve completed several projects throughout my studies, one of which is "Cooklet," a web application that allows users to search for
+              recipes based on ingredients they already have at home. Another project I’m currently working on is "BKos," a platform designed to help people find housing options, including boarding houses, apartments, and more.
             </p>
           </div>
-          <div data-aos="fade-down" data-aos-duration="3000" data-aos-delay="2000" class="col mb-4">
+          <div data-aos="fade-down" data-aos-duration="3000" data-aos-delay="2000" class="col">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              As I look toward the future, my goal is to expand my expertise in languages such as Golang, Swift, Ruby, and Kotlin, which are gaining popularity in the programming community. These languages offer exciting possibilities for
+              future development. After graduation, I aspire to work at leading tech companies like Google, Microsoft, Apple, or Meta, where I can contribute to cutting-edge innovations and be part of teams that shape the future of
+              technology. I’m confident that my dedication and passion for coding will lead me to exciting opportunities in this ever-evolving industry.
             </p>
           </div>
         </div>
@@ -157,7 +156,7 @@
         </div>
         <div class="row">
           <div class="col">
-            <div data-aos="flip-up" data-aos-duration="2000" data-aos-delay="2000" class="card">
+            <div data-aos="flip-up" data-aos-duration="2000" data-aos-delay="2000" data-aos-offset="50" class="card">
               <h3>Cooklet</h3>
               <img src="/img/cooklet.png" alt="Project 3" class="card-img-top" />
               <div class="card-body">
@@ -170,7 +169,7 @@
             </div>
           </div>
           <div class="col">
-            <div data-aos="flip-up" data-aos-duration="2000" data-aos-delay="2500" class="card">
+            <div data-aos="flip-up" data-aos-duration="2000" data-aos-delay="2300" data-aos-offset="50" class="card">
               <h3>Cooklet</h3>
               <img src="/img/cooklet.png" alt="Project 4" class="card-img-top" />
               <div class="card-body">
@@ -183,7 +182,7 @@
             </div>
           </div>
           <div class="col">
-            <div data-aos="flip-up" data-aos-duration="2000" data-aos-delay="3000" class="card mb-4">
+            <div data-aos="flip-up" data-aos-duration="2000" data-aos-delay="2800" data-aos-offset="50" class="card mb-4">
               <h3>Cooklet</h3>
               <img src="/img/cooklet.png" alt="Project 5" class="card-img-top" />
               <div class="card-body">
