Fixing Project Section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg sticky-top shadow-sm">
       <div class="container-fluid">
-        <a class="navbar-brand text-light fw-bolder" href="#">Portofolio</a>
+        <a class="navbar-brand text-light fw-bolder ms-3" href="#">Portofolio</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span
             ><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0,0,256,256">
@@ -76,13 +76,17 @@
           <!-- Text Section -->
           <div class="col-12">
             <h1 class="display-4">Hi! I'm Luvky Pratama Johanes</h1>
-            <p class="lead short-abt">
+            <p class="lead short-abt font-monospace">
               A Computer Science student at BINUS with a passion for web development. Skilled in various programming languages like HTML, CSS, JavaScript, and more. Excited to keep expanding my expertise in the tech world!
             </p>
           </div>
           <!-- Image Section -->
           <div class="col-12">
             <img src="/img/Untitled design (3).png" alt="ME" width="300" class="mt-4" />
+          </div>
+
+          <div class="hero-line">
+            <div style="height: 80px; width: 2px" class="hero-line-v"></div>
           </div>
         </div>
       </div>
@@ -132,66 +136,38 @@
               <h3>Cooklet</h3>
               <img src="/img/cooklet.png" alt="Project 1" class="card-img-top" />
               <div class="card-body">
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
-                <div class="d-flex justify-content-center gap-1 mt-2">
-                  <button type="button" class="btn btn-secondary">Project 1</button>
-                  <button type="button" class="btn btn-secondary">Repo</button>
+                <p class="card-text">
+                  Cooklet adalah platform web yang memudahkan pengguna menemukan resep masakan berdasarkan bahan yang tersedia di rumah. Dengan fitur pencarian berbasis bahan, kategori resep lengkap, dan panduan langkah demi langkah,
+                  Cooklet membantu pengguna menciptakan hidangan lezat tanpa perlu berbelanja tambahan.
+                </p>
+                <div class="justify-content-center mt-2">
+                  <a href="https://github.com/kyl464/Cooklet-SE" class="btn btn-secondary" tabindex="-1" role="button" aria-disabled="true">Repository</a>
                 </div>
               </div>
             </div>
           </div>
           <div class="col">
             <div data-aos="flip-up" data-aos-duration="2000" data-aos-delay="1500" data-aos-offset="300" class="card">
-              <h3>Cooklet</h3>
-              <img src="/img/cooklet.png" alt="Project 2" class="card-img-top" />
-              <div class="card-body">
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
-                <div class="d-flex justify-content-center gap-1 mt-2">
-                  <button type="button" class="btn btn-secondary">Project 2</button>
-                  <button type="button" class="btn btn-secondary">Repo</button>
+              <h3>BKost</h3>
+              <img src="/img/image.png" alt="Project 2" class="card-img-top" />
+              <div class="card-body bkm">
+                <p class="card-text bktm">
+                  BKost adalah platform web yang mempermudah pencarian tempat tinggal atau kos-kosan sesuai kebutuhan. Dengan fitur pencarian lokasi, rentang harga, serta fasilitas yang tersedia, BKost membantu pengguna menemukan hunian
+                  yang ideal dengan cepat dan efisien.
+                </p>
+                <div class="justify-content-center mb-1">
+                  <a href="https://github.com/kyl464/Bkost" class="btn btn-secondary" tabindex="-1" role="button" aria-disabled="true">Repository</a>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col">
-            <div data-aos="flip-up" data-aos-duration="2000" data-aos-delay="2000" data-aos-offset="50" class="card">
-              <h3>Cooklet</h3>
-              <img src="/img/cooklet.png" alt="Project 3" class="card-img-top" />
-              <div class="card-body">
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
-                <div class="d-flex justify-content-center gap-1 mt-2">
-                  <button type="button" class="btn btn-secondary">Project 3</button>
-                  <button type="button" class="btn btn-secondary">Repo</button>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div data-aos="flip-up" data-aos-duration="2000" data-aos-delay="2300" data-aos-offset="50" class="card">
-              <h3>Cooklet</h3>
-              <img src="/img/cooklet.png" alt="Project 4" class="card-img-top" />
-              <div class="card-body">
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
-                <div class="d-flex justify-content-center gap-1 mt-2">
-                  <button type="button" class="btn btn-secondary">Project 4</button>
-                  <button type="button" class="btn btn-secondary">Repo</button>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div data-aos="flip-up" data-aos-duration="2000" data-aos-delay="2800" data-aos-offset="50" class="card mb-4">
-              <h3>Cooklet</h3>
-              <img src="/img/cooklet.png" alt="Project 5" class="card-img-top" />
-              <div class="card-body">
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
-                <div class="d-flex justify-content-center gap-1 mt-2">
-                  <button type="button" class="btn btn-secondary">Project 5</button>
-                  <button type="button" class="btn btn-secondary">Repo</button>
-                </div>
-              </div>
+        <div class="col-sm-6 mx-auto p-2">
+          <div data-aos="flip-up" data-aos-duration="2000" data-aos-delay="1000" data-aos-offset="150" class="card">
+            <div class="card-body">
+              <h5 class="card-title">More Project</h5>
+              <p class="card-text">Check my github profile for more project repositories.</p>
+              <a href="https://github.com/kyl464" class="btn btn-secondary" tabindex="-1" role="button" aria-disabled="true">Github Profile</a>
             </div>
           </div>
         </div>
