Fixing Card-body

--- a/index.html
+++ b/index.html
@@ -132,30 +132,30 @@
       <div class="container text-center">
         <div class="row">
           <div class="col">
-            <div data-aos="flip-up" data-aos-duration="2000" data-aos-delay="1000" data-aos-offset="300" class="card">
+            <div data-aos="flip-up" data-aos-duration="2000" data-aos-delay="1000" data-aos-offset="300" class="card h-100">
               <h3>Cooklet</h3>
               <img src="/img/cooklet.png" alt="Project 1" class="card-img-top" />
-              <div class="card-body">
-                <p class="card-text">
+              <div class="card-body d-flex flex-column">
+                <p class="card-text mt-auto">
                   Cooklet adalah platform web yang memudahkan pengguna menemukan resep masakan berdasarkan bahan yang tersedia di rumah. Dengan fitur pencarian berbasis bahan, kategori resep lengkap, dan panduan langkah demi langkah,
                   Cooklet membantu pengguna menciptakan hidangan lezat tanpa perlu berbelanja tambahan.
                 </p>
-                <div class="justify-content-center mt-2">
+                <div class="justify-content-center mt-auto">
                   <a href="https://github.com/kyl464/Cooklet-SE" class="btn btn-secondary" tabindex="-1" role="button" aria-disabled="true">Repository</a>
                 </div>
               </div>
             </div>
           </div>
           <div class="col">
-            <div data-aos="flip-up" data-aos-duration="2000" data-aos-delay="1500" data-aos-offset="300" class="card">
+            <div data-aos="flip-up" data-aos-duration="2000" data-aos-delay="1500" data-aos-offset="300" class="card h-100">
               <h3>BKost</h3>
               <img src="/img/image.png" alt="Project 2" class="card-img-top" />
-              <div class="card-body bkm">
-                <p class="card-text bktm">
-                  BKost adalah platform web yang mempermudah pencarian tempat tinggal atau kos-kosan sesuai kebutuhan. Dengan fitur pencarian lokasi, rentang harga, serta fasilitas yang tersedia, BKost membantu pengguna menemukan hunian
-                  yang ideal dengan cepat dan efisien.
+              <div class="card-body d-flex flex-column">
+                <p class="card-text mt-auto">
+                  BKost adalah platform web yang mempermudah pencarian kos atau tempat tinggal sesuai kebutuhan. Dengan fitur lokasi, rentang harga, dan fasilitas lengkap, BKost membantu pengguna menemukan hunian ideal secara cepat dan
+                  efisien.
                 </p>
-                <div class="justify-content-center mb-1">
+                <div class="justify-content-center mt-auto">
                   <a href="https://github.com/kyl464/Bkost" class="btn btn-secondary" tabindex="-1" role="button" aria-disabled="true">Repository</a>
                 </div>
               </div>
