--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Portofolio | Luvky Pratama Johanes</title>
     <!-- CSS  -->
     <link rel="stylesheet" href="style.css" />
+    <!-- Lenis -->
+    <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@latest/bundled/lenis.js"></script>
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
@@ -316,14 +318,51 @@
         let scrollTop = window.pageYOffset || document.documentElement.scrollTop;
 
         if (scrollTop > lastScrollTop) {
-          // Scroll ke bawah, sembunyikan navbar
           gsap.to(navbar, { top: "-80px", duration: 0.5, ease: "power2.out" });
         } else {
-          // Scroll ke atas, tampilkan navbar
           gsap.to(navbar, { top: "0", duration: 0.5, ease: "power2.out" });
         }
 
         lastScrollTop = scrollTop;
+      });
+    </script>
+
+    <script>
+      const lenis = new Lenis();
+
+      lenis.on("scroll", (e) => {
+        console.log(e);
+      });
+
+      lenis.on("scroll", ScrollTrigger.update);
+
+      gsap.ticker.add((time) => {
+        lenis.raf(time * 1000); // Convert time from seconds to milliseconds
+      });
+
+      gsap.ticker.lagSmoothing(0);
+    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script>
+      $(document).ready(function () {
+        $("a").on("click", function (event) {
+          if (this.hash !== "") {
+            event.preventDefault();
+
+            var hash = this.hash;
+
+            $("html, body").animate(
+              {
+                scrollTop: $(hash).offset().top,
+              },
+              800,
+              function () {
+                window.location.hash = hash;
+                gsap.to(navbar, { top: "0", duration: 0.5, ease: "power2.out" });
+              }
+            );
+          } // End if
+        });
       });
     </script>
   </body>
